--- a/src/sass/inbox-sidebar.scss
+++ b/src/sass/inbox-sidebar.scss
@@ -2,35 +2,34 @@
 @import '../App.scss';
 
 .inbox-sidebar {
-    width: 240px;
+  width: 240px;
 
-    @include media(">=smallPhone", "<=mediumPhone") {
-        display: none;
-    }
+  @include media('>=smallPhone', '<=mediumPhone') {
+    display: none;
+  }
 }
 
 .inbox-messages {
-    width: 100%;
-    overflow-x: hidden;
-    @include media(">=smallPhone", "<=mediumPhone") {
-        
-    }
+  width: 100%;
+  overflow-x: hidden;
+  @include media('>=smallPhone', '<=mediumPhone') {
+  }
 }
 
 .list-name {
-    display: block;
-    // @include mediaMaxWidth(800px) {
-    //     display: none;
-    // }
+  display: block;
+  // @include mediaMaxWidth(800px) {
+  //     display: none;
+  // }
 }
 
 .inbox-sidebar > .MuiPaper-root {
-    z-index: auto;
-    width: 240px;
+  z-index: auto;
+  width: 240px;
 
-    // @include mediaMaxWidth(800px){
-    //     width: 56px !important;
-    // }
+  // @include mediaMaxWidth(800px){
+  //     width: 56px !important;
+  // }
 }
 
 // .sort-select {
