--- a/src/index.scss
+++ b/src/index.scss
@@ -4,54 +4,53 @@
 body {
   // zoom: 80%;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif !important;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   //background-color: #f9f9f9;  //#f1f3f4;
   background-color: white;
 
-  @include media("<=smallPhone") {
+  @include media('<=smallPhone') {
     background-color: red;
   }
 
-  @include media(">=smallPhone", "<=mediumPhone") {
+  @include media('>=smallPhone', '<=mediumPhone') {
     background-color: rgb(0, 255, 221);
   }
-  
-  @include media(">=mediumPhone", "<=largePhone") {
+
+  @include media('>=mediumPhone', '<=largePhone') {
     background-color: orange;
   }
 
-  @include media(">=largePhone", "<=tablet") {
+  @include media('>=largePhone', '<=tablet') {
     background-color: yellowgreen;
   }
 
-  @include media(">=tablet", "<=desktop") {
+  @include media('>=tablet', '<=desktop') {
     // background-color: mediumorchid;
   }
 
-  @include media(">=desktop", "<=largeDesktop") {
+  @include media('>=desktop', '<=largeDesktop') {
     // background-color: #80808054;
     background-color: white;
   }
-  
-  @include media(">=largeDesktop", "<=TV") {
+
+  @include media('>=largeDesktop', '<=TV') {
     background-color: #ff00ff7d;
   }
 }
 
 body::-webkit-scrollbar {
-  width: 5px;               /* width of the entire scrollbar */
+  width: 5px; /* width of the entire scrollbar */
 }
 body::-webkit-scrollbar-track {
-  background: rgb(255, 255, 255);        /* color of the tracking area */
+  background: rgb(255, 255, 255); /* color of the tracking area */
 }
 body::-webkit-scrollbar-thumb {
-  background-color: #3e5060;    /* color of the scroll thumb */
-  border-radius: 20px;       /* roundness of the scroll thumb */
-  border: 1px solid #3e5060;  /* creates padding around scroll thumb */
+  background-color: #3e5060; /* color of the scroll thumb */
+  border-radius: 20px; /* roundness of the scroll thumb */
+  border: 1px solid #3e5060; /* creates padding around scroll thumb */
 }
 
 a {
@@ -60,48 +59,47 @@ a {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace !important;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace !important;
 }
 
 .ilqna-main {
-    position: relative;
-    top: 66px;
-    margin-bottom: 10%;
-    padding-left: 2%;
-    padding-right: 2%;
-    cursor: default;
+  position: relative;
+  top: 66px;
+  margin-bottom: 10%;
+  padding-left: 2%;
+  padding-right: 2%;
+  cursor: default;
 
-    @include media("<=smallPhone") {
-        margin-bottom: 50%;
-    }
+  @include media('<=smallPhone') {
+    margin-bottom: 50%;
+  }
 
-    @include media(">smallPhone", "<=mediumPhone") {
-        margin-bottom: 50%;
-    }
-    @include media(">=largePhone", "<=tablet") {
-        margin-bottom: 12.2%;
-    }
-    
-    @include media(">=tablet", "<=desktop") {
-        margin-bottom: 12.2%;
-    }
-}
+  @include media('>smallPhone', '<=mediumPhone') {
+    margin-bottom: 50%;
+  }
+  @include media('>=largePhone', '<=tablet') {
+    margin-bottom: 12.2%;
+  }
 
-@mixin mediaMaxWidth($size){
-  @media screen and (max-width:$size) {
-      @content;
+  @include media('>=tablet', '<=desktop') {
+    margin-bottom: 12.2%;
   }
 }
 
-@mixin mediaMinWidth($size){
-  @media screen and (min-width:$size) {
-      @content;
+@mixin mediaMaxWidth($size) {
+  @media screen and (max-width: $size) {
+    @content;
   }
 }
 
-@mixin mediaMaxHeight($size){
-  @media screen and (max-height:$size) {
-      @content;
+@mixin mediaMinWidth($size) {
+  @media screen and (min-width: $size) {
+    @content;
+  }
+}
+
+@mixin mediaMaxHeight($size) {
+  @media screen and (max-height: $size) {
+    @content;
   }
 }
