--- a/src/sass/footer.scss
+++ b/src/sass/footer.scss
@@ -2,14 +2,14 @@
 @import '../App.scss';
 
 .footer-paper {
-    position: fixed;
-    bottom: -4px;
-    left: 0;
-    right: 0;
-    background-color: rgba(255, 255, 255, .15); //need to add
-	backdrop-filter: blur(15px); //need to add
-    z-index: 999;
+  position: fixed;
+  bottom: -4px;
+  left: 0;
+  right: 0;
+  background-color: rgba(255, 255, 255, 0.15); //need to add
+  backdrop-filter: blur(15px); //need to add
+  z-index: 999;
 }
 .footer-icon:hover {
-    color: #1976d2;
+  color: #1976d2;
 }
