--- a/src/sass/login.scss
+++ b/src/sass/login.scss
@@ -2,98 +2,98 @@
 @import '../App.scss';
 
 .login {
-    height: 100vh;
-    position: unset !important;
-    top: 0px !important;
-    margin-bottom: 0% !important;
-    padding-left: 0% !important;
-    padding-right: 0% !important;
-    cursor: default;
-    user-select: none;
+  height: 100vh;
+  position: unset !important;
+  top: 0px !important;
+  margin-bottom: 0% !important;
+  padding-left: 0% !important;
+  padding-right: 0% !important;
+  cursor: default;
+  user-select: none;
 }
 
 .show-password {
-    text-align-last: right; 
-    margin: 0 !important; 
-    padding: 0;
-    font-size: .6rem;
-    color: #1976d2;
-    text-decoration: none;
-    cursor: pointer;
+  text-align-last: right;
+  margin: 0 !important;
+  padding: 0;
+  font-size: 0.6rem;
+  color: #1976d2;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .loading-btn {
-    margin-top: 10px !important;
+  margin-top: 10px !important;
 }
 
 .login-window {
-    width: 40%;
-    // height: 430px;
-	background-color: rgba(255, 255, 255, 0.848); //need to add
-	backdrop-filter: blur(15px); //need to add
-    padding-top: 2%;
-    padding-bottom: 2%;
-    padding-left: 4%;
-    padding-right: 4%;
-    position: relative;
-    top: 15vh;
-    margin: auto;
+  width: 40%;
+  // height: 430px;
+  background-color: rgba(255, 255, 255, 0.848); //need to add
+  backdrop-filter: blur(15px); //need to add
+  padding-top: 2%;
+  padding-bottom: 2%;
+  padding-left: 4%;
+  padding-right: 4%;
+  position: relative;
+  top: 15vh;
+  margin: auto;
 }
 
 .login-form {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 .stack-style {
-    margin-top: 5%;
+  margin-top: 5%;
 }
 
 .login-icon-palette {
-    padding-top: 3%;
+  padding-top: 3%;
 }
 
 .login-icon {
-    padding-left: 4.3px;
-    padding-right: 4.3px;
-    position: relative;
-    cursor: pointer;
-    top: 3px;
-    font-size: 2.3rem !important;
+  padding-left: 4.3px;
+  padding-right: 4.3px;
+  position: relative;
+  cursor: pointer;
+  top: 3px;
+  font-size: 2.3rem !important;
 }
 
 .login-icon-palette {
-    text-align: center;
+  text-align: center;
 }
 
 .other-link {
-    display: grid;
-    text-align: end;
+  display: grid;
+  text-align: end;
 }
 
 .google:hover {
-    color: #ea4335;
+  color: #ea4335;
 }
 .facebook:hover {
-    color: #1877f2;
+  color: #1877f2;
 }
 .reddit:hover {
-    color: #ff4500;
+  color: #ff4500;
 }
 .linkedin:hover {
-    color: #0077b5;
+  color: #0077b5;
 }
 .whatsapp:hover {
-    color: #00e676;
+  color: #00e676;
 }
 .github:hover {
-    color: #1b1f23;
+  color: #1b1f23;
 }
 
 .info-icon {
-    font-size: 1rem !important;
-    position: relative;
-    top: 4px;
+  font-size: 1rem !important;
+  position: relative;
+  top: 4px;
 }
