--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -54,3 +54,13 @@
 .header-icon {
   color: #ffffff;
 }
+
+.icon-size {
+  font-size: 1.2rem !important;
+}
+
+.drawer-design .css-4t3x6l-MuiPaper-root-MuiDrawer-paper {
+  border-radius: 10px;
+  margin: 10px;
+  height: 97%;
+}
