--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -6,6 +6,17 @@
   cursor: pointer;
 }
 
+.header-ui {
+  background-color: rgba(25, 118, 210, 0.7) !important;
+  backdrop-filter: blur(10px) !important;
+
+  border-radius: 10px;
+  margin: 5px;
+  width: 97% !important;
+  left: 1% !important;
+  height: 7%;
+}
+
 .seachfield {
   border: 1px solid black;
 }
@@ -23,9 +34,10 @@
 
 .drawer-title {
   width: 220px;
-  margin: 0%;
   padding-left: 14px;
   padding-right: 10px;
+  padding-top: 5px;
+  padding-bottom: 5px;
   box-shadow:
     0px 2px 4px -1px rgba(0, 0, 0, 0.2),
     0px 4px 5px 0px rgba(0, 0, 0, 0.14),
@@ -34,7 +46,7 @@
   text-align: left;
   background-color: #1976d2;
   color: #ffffff;
-  font-size: 0.95rem !important;
+  font-size: 1rem !important;
   line-height: 1 !important;
 
   @include media('<=smallPhone') {
@@ -68,6 +80,7 @@
 
 .drawer-design .css-4t3x6l-MuiPaper-root-MuiDrawer-paper {
   border-radius: 10px;
-  margin: 10px;
-  height: 97%;
+  margin-top: 5px;
+  margin-left: 18px;
+  height: 98%;
 }
