--- a/src/sass/user.scss
+++ b/src/sass/user.scss
@@ -2,22 +2,17 @@
 @import '../App.scss';
 
 .user {
-  margin-top: 2%;
+  margin-bottom: 1%;
   display: block;
-  align-content: center;
-  justify-content: center;
-  // width: 100%;
-  // height: auto;
-  // margin-bottom: 12%;
-  // cursor: default;
-  // user-select: none;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
 }
 
 .user-image {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
   display: flex;
-  align-content: center;
-  justify-content: center;
-  width: 100%;
+  width: 20%;
   height: auto;
   @include media('<=smallPhone') {
     font-size: 1.2rem;
@@ -25,44 +20,43 @@
 }
 
 .user-image .MuiBadge-badge {
-  width: 20px !important;
-  height: 20px !important;
+  width: 10px !important;
+  height: 10px !important;
 }
 
 .avatar-img {
-  // width: 150px !important;
-  // height: 150px !important;
-  // font-size: 6rem !important;
-  width: 120px !important;
-  height: 120px !important;
-  font-size: 5rem !important;
+  width: 100px !important;
+  height: 100px !important;
+  font-size: 4rem !important;
 }
 
 .user-title {
+  height: fit-content;
   color: #0a1929;
-  font-size: 2rem !important;
+  font-size: 1.6rem !important;
   padding-bottom: 0% !important;
-  text-align: center;
-  line-height: 1 !important;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
 }
 
 .user-title-icon {
-  // font-size: 2rem;
-  // cursor: pointer;
-  // color: #0a1929;
-  font-size: 1rem;
+  // font-size: 1rem;
   font-weight: 600 !important;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
   cursor: pointer;
   position: absolute;
   color: #0a1929;
+  top: 64.5%;
 }
 
 .ask-section {
   color: #0a1929;
-  margin-left: 15% !important;
-  margin-top: 1% !important;
-  width: 70% !important;
+  width: 30% !important;
   height: auto;
+  position: absolute;
+  top: 0% !important;
+  right: 2%;
 }
 
 .sections {
@@ -70,7 +64,8 @@
 }
 
 .sections:hover {
-  box-shadow: 0px 10px 13px 0px rgba(0, 0, 0, 0.24);
+  // box-shadow: 0px 10px 13px 0px rgba(0, 0, 0, 0.24);
+  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.1);
   cursor: pointer;
   color: #1976d2 !important;
   & .user-icon {
@@ -92,30 +87,35 @@
 .ask-section-count {
   color: #0a1929 !important;
   font-size: 3rem !important;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
   font-weight: 700 !important;
-  padding-bottom: 0% !important;
-  text-align: center;
   line-height: 1 !important;
 }
 
 .caption-text {
-  text-align: center;
-  font-size: 1rem !important;
-  line-height: 1 !important;
-  padding-bottom: 0% !important;
+  height: fit-content;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
+  // font-size: 1rem !important;
+  // line-height: 1 !important;
+  // padding-bottom: 0% !important;
 }
 
 .ask-section-text {
   color: #0a1929;
   font-size: 1rem !important;
   font-weight: 700 !important;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
 }
 
 .user-email {
   color: #0a1929;
   font-size: 1rem !important;
   font-weight: 700 !important;
-  text-align: left;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
   overflow-wrap: break-word;
 }
 
@@ -142,7 +142,8 @@
 }
 
 .about-icon {
-  text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
+    'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif !important;
   width: 100% !important;
   height: auto !important;
   font-size: 3rem !important;
@@ -155,4 +156,8 @@
   top: 12px;
   float: right;
   font-size: 0.6rem;
+}
+
+.user-header {
+  // display: inline-flex  ;
 }
